--- a/.github/workflows/terraform_format.yaml
+++ b/.github/workflows/terraform_format.yaml
@@ -1,6 +1,13 @@
 name: Terraform format
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      terraform_version:
+        description: 'Version of terraform to use'
+        required: false
+        type: string
+        default: 'latest'
 
 jobs:
   format-check:
@@ -18,7 +25,7 @@ jobs:
         sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         sudo apt-get update
         sudo apt-get remove terraform
-        sudo apt-get install terraform=1.0.9
+        sudo apt-get install terraform=${{ github.event.inputs.terraform_version }}
         /usr/bin/terraform --version
 
     - name: check terraform
