--- a/.github/workflows/terraform_format.yaml
+++ b/.github/workflows/terraform_format.yaml
@@ -25,7 +25,7 @@ jobs:
         sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
         sudo apt-get update
         sudo apt-get remove terraform
-        sudo apt-get install terraform=${{ github.event.inputs.terraform_version }}
+        sudo apt-get install terraform=${{ inputs.terraform_version }}
         /usr/bin/terraform --version
 
     - name: check terraform
