--- a/.github/workflows/terraform_tflint.yaml
+++ b/.github/workflows/terraform_tflint.yaml
@@ -1,6 +1,12 @@
 name: Terraform format
 
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      working-directory:
+        description: Working directory
+        required: false
+        default: "."
 
 jobs:
   tflint:
@@ -26,6 +32,8 @@ jobs:
 
     - name: Init TFLint
       run: tflint --init
+      working-directory: ${{ inputs.working-directory }}
 
     - name: Run TFLint
       run: tflint -f compact
+      working-directory: ${{ inputs.working-directory }}
