added type to input in tflint
Signed-off-by: Maximiliano Aguirre <maxi.aguirre@sixninesit.com>

--- a/.github/workflows/terraform_tflint.yaml
+++ b/.github/workflows/terraform_tflint.yaml
@@ -4,7 +4,8 @@ on:
   workflow_call:
     inputs:
       working-directory:
-        description: Working directory
+        description: "Working directory"
+        type: string
         required: false
         default: "."
 
