fixed actions to match new naming convention
Signed-off-by: Maximiliano Aguirre <maxi.aguirre@sixninesit.com>

--- a/.github/workflows/terraform_docs.yaml
+++ b/.github/workflows/terraform_docs.yaml
@@ -4,7 +4,7 @@ on: workflow_call
 
 jobs:
   format-check:
-    name: Check terraform docs
+    name: docs
     runs-on: ubuntu-latest
 
     steps:
